--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Lora&display=swap" rel="stylesheet">
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
